--- a/src/demos/00_template/index.html
+++ b/src/demos/00_template/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>React - Template</title>
+    <link rel="stylesheet"  type="text/css" href="../../css/main.css">
     <script src="../../js/react.min.js"></script>
     <script src="../../js/react-dom.min.js"></script>
     <script src="../../js/browser.min.js"></script>
@@ -13,10 +14,117 @@
     <div id="container"></div>
 
     <script type="text/babel">
-        ReactDOM.render(
-            <h2>Welcome to React!</h2>,
-            document.getElementById('container')
-        );
+        var Comments = React.createClass({
+            getInitialState: function () {
+                return {editing: false}
+            },
+            edit: function() {
+               this.setState({editing: true});
+            },
+            save: function() {
+                this.props.updateCommentText(this.refs.newText.value, this.props.index);
+                var val = this.refs.newText.value;
+
+                this.setState({editing: false});
+            },
+
+
+            remove: function() {
+                this.props.deleteFromBoard(this.props.index);
+            },
+            renderNormal: function () {
+                return (<div className="commentContainer">
+                            <div>
+                                <div className="commentText">{this.props.children}</div>
+                                <button onClick={this.edit} className="button-primary">Edit</button>
+                                <button onClick={this.remove} className="button-danger">Remove</button>
+                            </div>
+                        </div>
+                );
+            },
+            renderForm: function () {
+                return (<div className="commentContainer">
+                            <div>
+                                <textarea ref="newText" defaultValue={this.props.children}></textarea>
+                                <button onClick={this.save} className="button-success">save</button>
+                            </div>
+                        </div>
+                );
+            },
+
+            render:  function() {
+                if(this.state.editing){
+                    return this.renderForm()
+                } else {
+                    return this.renderNormal()
+                }
+            }
+        });
+
+        var CheckBox = React.createClass({
+            getInitialState: function() {
+                return {checked: false}
+
+            },
+            handleChecked: function () {
+              this.setState({checked: !this.state.checked})
+            },
+            render: function () {
+                var msg;
+                if(this.state.checked){
+                    msg = "checked"
+                } else {
+                    msg = "unchecked"
+                }
+                return (
+                        <div>
+                            <input type="checkbox" onChange={this.handleChecked} defaultChecked={this.state.checked}/>
+                            <h3>{msg}</h3></div>
+                );
+            }
+        });
+        var Option
+
+        var Board = React.createClass({
+            getInitialState: function () {
+                return {
+                    comments: ["bacon", "seconf", "enoufh"]
+                }
+            },
+            add: function (text) {
+                var arr = this.state.comments;
+                arr.push(text);
+                this.setState({comments: arr});
+            },
+            removeComment: function (i) {
+                console.log("remove!");
+                var arr = this.state.comments;
+                arr.splice(i, 1);
+                this.setState({comments: arr});
+            },
+            updateComment: function (newText, i) {
+                var arr = this.state.comments;
+                arr[i] = newText;
+                this.setState({comments: arr});
+            },
+
+            eachComment: function (value, i) {
+                return (<Comments key={i} index={i} updateCommentText={this.updateComment} deleteFromBoard={this.removeComment}>{value}</Comments>);
+            },
+            render: function () {
+                return (
+                        <div>
+                            <button onClick={this.add.bind(null, "default text")} className="button-info">Add New</button>
+                        <div className="board">
+                            {this.state.comments.map(this.eachComment)}
+                        </div>
+                        </div>
+                );
+            } 
+        });
+
+        ReactDOM.render(<Board />,
+        document.getElementById('container'));
     </script>
 
 </body>
